// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Spacing renders top and bottom spacing for medium device 1`] = `
.c0 {
  width: 100%;
  padding-top: 0;
  padding-bottom: 0;
}

@media screen and (min-width:481px) {
  .c0 {
    padding-top: 24px;
    padding-bottom: 24px;
  }
}

@media screen and (min-width:769px) {
  .c0 {
    padding-top: 24px;
    padding-bottom: 24px;
  }
}

@media screen and (min-width:1025px) {
  .c0 {
    padding-top: 24px;
    padding-bottom: 24px;
  }
}

<div
  className="c0"
/>
`;

exports[`Spacing renders top and bottom spacing for medium device 2`] = `
.c0 {
  width: 100%;
  padding-top: 0;
  padding-bottom: 0;
}

@media screen and (min-width:481px) {
  .c0 {
    padding-top: 0;
    padding-bottom: 0;
  }
}

@media screen and (min-width:769px) {
  .c0 {
    padding-top: 24px;
    padding-bottom: 24px;
  }
}

@media screen and (min-width:1025px) {
  .c0 {
    padding-top: 24px;
    padding-bottom: 24px;
  }
}

<div
  className="c0"
/>
`;

exports[`Spacing renders top and bottom spacing for medium device 3`] = `
.c0 {
  width: 100%;
  padding-top: 0;
  padding-bottom: 0;
}

@media screen and (min-width:481px) {
  .c0 {
    padding-top: 0;
    padding-bottom: 0;
  }
}

@media screen and (min-width:769px) {
  .c0 {
    padding-top: 0;
    padding-bottom: 0;
  }
}

@media screen and (min-width:1025px) {
  .c0 {
    padding-top: 24px;
    padding-bottom: 24px;
  }
}

<div
  className="c0"
/>
`;

exports[`Spacing renders top and bottom spacing for small device 1`] = `
.c0 {
  width: 100%;
  padding-top: 24px;
  padding-bottom: 24px;
}

@media screen and (min-width:481px) {
  .c0 {
    padding-top: 24px;
    padding-bottom: 24px;
  }
}

@media screen and (min-width:769px) {
  .c0 {
    padding-top: 24px;
    padding-bottom: 24px;
  }
}

@media screen and (min-width:1025px) {
  .c0 {
    padding-top: 24px;
    padding-bottom: 24px;
  }
}

<div
  className="c0"
/>
`;
